--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>States</H1>
-        <UL>
-            {% for state in states %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B>
-                <UL>
-                    {% for city in state.cities|sort(attribute='name') %}
-                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                    {% endfor %}
-                </UL>
-            </LI>
-            {% endfor %}
-        </UL>
-    </BODY>
-</HTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>HBNB</title>
+</head>
+<body>
+{% if state %}
+    <h1>State: {{ state.name }}</h1>
+    <h3>Cities:</h3>
+    <ul>
+    {% for city in state.cities %}
+        <li>{{ city.id }}: <b>{{ city.name }}</b></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <h1>States</h1>
+    <ul>
+    {% for state in states %}
+        <li>{{ state.id }}: <b>{{ state.name }}</b></li>
+    {% endfor %}
+    </ul>
+{% endif %}
+</body>
+</html>
